tests/errors/typecheck/test_tc_03_assign_mismatch.pc
#import std.io;
int main() {
    mut int x = 5;
    x = "hello";
}
